# Midas

./: .gitignore  Cargo.toml  README.md
metafuzz/: .gitignore  Cargo.toml  Makefile.toml
metafuzz/src/: main.rs
src/: cache.rs  executor.rs  feedback.rs  fuzzer.rs  indexed_corpus.rs  input.rs  lib.rs  main.rs  minimizer.rs  mutation_utils.rs  oracle.rs  power_sched.rs  scheduler.rs  state.rs  state_input.rs  tracer.rs  txn_corpus.rs
src/corpus_fetcher/: mod.rs
src/evm/: abi.rs  bytecode_analyzer.rs  bytecode_iterator.rs  config.rs  contract_utils.rs  corpus_initializer.rs  cov_stage.rs  feedbacks.rs  host.rs  input.rs  minimizer.rs  mod.rs  mutator.rs  oracle.rs  scheduler.rs  types.rs  utils.rs  vm.rs
src/evm/blaz/: builder.rs  mod.rs  offchain_artifacts.rs  offchain_config.rs
src/evm/concolic/: concolic_host.rs  concolic_stage.rs  expr.rs
src/evm/middlewares/: call_printer.rs  cheatcode.rs  coverage.rs  middleware.rs  mod.rs  reentrancy.rs  sha3_bypass.rs
src/evm/onchain/: abi_decompiler.rs  endpoints.rs  flashloan.rs  mod.rs  onchain.rs
src/evm/oracles/: arb_call.rs  echidna.rs  erc20.rs  function.rs  icy_bug.rs  invariant.rs  mod.rs  reentrancy.rs  selfdestruct.rs  state_comp.rs  typed_bug.rs  v2_pair.rs
src/evm/presets/: mod.rs  pair.rs  presets.rs
src/evm/producers/: erc20.rs  icy_producer.rs  mod.rs  pair.rs
src/evm/solution/: mod.rs
src/evm/srcmap/: mod.rs  parser.rs
src/evm/uniswap/: mod.rs
src/fuzzers/: evm_fuzzer.rs  icy_fuzzer.rs  mod.rs
src/generic_vm/: vm_executor.rs  vm_state.rs
